2010-03-04 Josef Cacek
  * command line switches for TSA & OCSP

2010-02-24 Josef Cacek
  * documentation update

2009-11-07 Josef Cacek
  * Bouncy castle libraries upgrade (143->144)
  * Contact field added
  * TSA & OCSP support
  * SignerOptions class removed - BasicSignerOptions used instead
  * workaround for non-unique key aliases in WINDOWS-MY keystore
  * improvements in command-line version:
	- possibility to load default property file (-lp parameter)
	- selecting key by index (e.g. because of national character in key alias, -ki parameter)

2009-07-12 Josef Cacek
  * build.xml: exporting sources from CVS
  * iText upgrade (2.1.6->2.1.7)

2009-06-25 Josef Cacek
  * embedded Unicode font for Layer 2 texts in visible signature
  * additional option for setting font size in visible signature

2009-06-02 Josef Cacek
  * redesign of build process
  * launch4j used to generate exe for Windows
  * splash screen (in exe file)
  * JRE 6u14

2009-05-28 Josef Cacek
  * command-line support (batch processing)

2008-06-26 Josef Cacek
  * loading certificates from KeyStores (e.g. WINDOWS-ROOT in Java 6)

2008-06-16 Josef Cacek
  * basic support for PDF signature verification (command line controlled)
  * loading certificates from X.509 certification files

2008-05-20 Josef Cacek
  * enable/disable image field in visible signatures - depends on rendering mode
  * update documentation

2008-05-08 Josef Cacek
  * show page bounds in visible signature

2008-04 Josef Cacek
  * implementing visible signature

2008-03-27 Josef Cacek
  * fix for Java 5 (disable JDialog.setIconImage)

2008-03-26 Josef Cacek
  * support for encrypted documents
  * setting rights in the encrypted result PDFs
  * multiple keys in keystore support
  * append signature support
  * windows installer
  * updated guide

2008-02-11 Josef Cacek
  * signing PDF documents
  * OpenOffice.org Add-On
  * English & Czech language